<resources>
    <string name="app_name">Lifyplus2</string>
    <string name="desc">desc</string>
    <string name="Start_now">Lets Start</string>
    <string name="Name_N">Name</string>
    <string name="Age_A">Age</string>
    <string name="gender">Gender</string>
    <string name="male_1">Male</string>
    <string name="female_1">Female</string>
    <string name="Submit_info">Submit</string>
    <string name="title_activity_a_d_d_i_c_t_i_o_n_s">ADDICTIONS</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Alcohol">Alcohol</string>
    <string name="Begin">Lets Begin</string>
    <string name="Begin2">Begin</string>
    <string name="status"> Result: Untested</string>
    <string name="Smoking">Smoking</string>
    <string name="Sleep_Intake">Sleep Intake</string>
    <string name="Junk_Food">Junk Food</string>
    <string name="title_activity_alcohol_1">Alcohol_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Panic_B">Panic</string>
    <string name="Imageview">desc1</string>
    <string name="key_of_happiness_is_not_a_nlife_for_money">Key of happiness is not a \nlife for money</string>
    <string name="healthy_on_you">Healthy On You</string>
    <string name="start_now">Start Now</string>
    <string name="todo">TODO</string>
    <string name="relapse">Relapse</string>
    <string name="Pause">pause</string>
    <string name="timer">timer</string>
    <string name="timer_n">10:00</string>
    <string name="Date_picker">Calender</string>
    <string name="Text">Key of happiness is not a life for money</string>
    <string name="Date_pickert">Target</string>
    <string name="Instructions">Instructions</string>
    <string name="Alcohol_Kills">Alcohol Kills</string>
    <string name="Sleep_quote">Go to Sleep - Dark Circle Alert</string>
    <string name="junk_quote">Don\'t Eat Junk -You are human not dustbin</string>
    <string name="JUnk">Dont eat Junk - You are a human not dustbin</string>
    <string name="Healing">Healing Takes Time</string>
    <string name="Email">Enter_Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Continue">Continue</string>
    <string name="Alcohol_2">Alcohol</string>
    <string name="Value">Begineer = 30 days</string>
    <string name="Addictions">GoAlcoholGo</string>
    <string name="Value2">Welcome to GoAlcoholGo, the app for alcohol dependency tracking and recovery. Track your rehabilitation progress, get motivational messages, alerts and set milestones starting from small steps to quit your additions today.</string>
    <string name="Counter">365</string>
    <string name="Attempt">Attempt</string>
    <string name="Reset">0</string>
    <string name="Counterone">30</string>
    <string name="Reset1">Reset</string>
    <string name="Progress">Daily Progress</string>
    <string name="Panic">Help!</string>
    <string name="stest">Sobriety Test</string>
    <string name="svalues">Sensor Reading</string>
    <string name="phone">Phone</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="starttest">Start Test</string>
    <string name="stest_des">Instruction \nClick button and hold phone steady for 10 seconds. The phone will try to assess your steadiness via the onboard sensors.</string>
    <string name="Panic1">Panic</string>
    <string name="Quote">Quote of the Day</string>
    <string name="Quote1">Our greatest glory is not in never falling, but in rising every time we fall. - Confucius</string>
    <string name="Quote2">We are what we repeatedly do. Excellence, then, is not an act, but a habit. – Aristotle</string>
    <string name="Quote3">No man is free who is not master of himself. – Epictetus</string>
    <string name="DrinkWater">Drink Water</string>
    <string name="Read_Books">Read Books</string>
    <string name="Meditation">Meditation</string>
    <string name="Workout">Excercise</string>
    <string name="reward">Reward: New Badge!</string>
    <string name="avalues">Accelerometer Values</string>
    <string name="Daily_Goals">Healthy Habit Tracker</string>
    <string name="plus">+</string>
    <string name="minus1">-</string>
    <string name="Counter2">0</string>
    <string name="desc1">desc</string>
    <string name="Alert">Alert</string>
    <string name="Wallpaper">Wallpaper</string>
    <string name="insp">Inspire Me</string>
    <string name="Home">Home</string>
    <string name="submit">Submit</string>
    <string name="restart">Reset</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="start">Let\'s Start</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="Logout">Logout</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="register1">Register</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Password">Password</string>
    <string name="Email1">Email</string>
    <string name="Password_12">******</string>
    <string name="email_11">Email</string>
    <string name="Already1">Already have an Account? Login</string>


</resources>