<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cherd_back_blank"
    tools:context="com.dh.goalcoholgo.Alcohol_1">


    <Button
        android:id="@+id/btnDatePicker"
        style="@style/CustomFont"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/bgbtngreen"
        android:text="@string/Date_picker"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnstop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <Button
        android:id="@+id/btnstop"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/bgbtngreen"
        android:text="@string/relapse"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

    <TextView
        android:id="@+id/textViewContent"
        style="@style/CustomFont"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Date_pickert"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdownView" />

    <ImageView
        android:id="@+id/bgcircle"
        android:layout_width="250dp"
        android:layout_height="297dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <ImageView
        android:id="@+id/icanchor"
        android:layout_width="248dp"
        android:layout_height="236dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icanchor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <cn.iwgang.countdownview.CountdownView

        android:id="@+id/countdownView"
        style="@style/CustomFont"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="112dp"
        app:isHideTimeBackground="true"
        app:isShowDay="true"
        app:isShowHour="true"
        app:isShowMillisecond="true"
        app:isShowMinute="true"
        app:isShowSecond="true"
        app:isTimeTextBold="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgcircle"
        app:suffix="d"
        app:suffixGravity="bottom"
        app:suffixHour="h"
        app:suffixMillisecond="ms"
        app:suffixMinute="m"
        app:suffixSecond="s"
        app:suffixTextColor="#fff"
        app:suffixTextSize="12sp"
        app:timeBgColor="@color/Color_Accent"
        app:timeTextColor="#fff"
        app:timeTextSize="22sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="79dp"
        android:layout_height="42dp"
        android:text="@string/Counterone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Attempt" />

    <Button
        android:id="@+id/Attempt"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/Attempt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/Reset1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnstop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

    <Button
        android:id="@+id/Progress"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:onClick="Progress"
        android:text="@string/Progress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/Alert"
        app:layout_constraintStart_toEndOf="@+id/logout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Panic"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="1dp"
        android:onClick="Panic"
        android:text="@string/Panic"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnstop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

    <Button
        android:id="@+id/panic"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:onClick="stest"
        android:text="@string/stest"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnstop"
        app:layout_constraintEnd_toStartOf="@+id/Reset"
        app:layout_constraintStart_toEndOf="@+id/Panic"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker"
        app:layout_constraintVertical_bias="0.541" />

    <Button
        android:id="@+id/Alert"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:onClick="Alert"
        android:text="@string/Alert"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:onClick="logout"
        android:text="@string/Logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>