<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cherd_back"
    tools:context="com.dh.goalcoholgo.panic_3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_marginTop="150dp"
        android:text="@string/Quote"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="390dp"
        android:layout_height="192dp"
        android:layout_marginTop="30dp"
        android:text="@string/Quote3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bgbtngreen"
        android:onClick="P3"
        android:text="@string/insp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Home"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/bgbtngreen"
        android:onClick="H3"
        android:text="@string/Home"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>