<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cherd_back_bottom"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.dh.goalcoholgo.Form2">

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/Orange2"
        android:onClick="Submit"
        android:text="@string/Continue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignOut"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:onClick="Logout"
        android:text="@string/Logout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="251dp"
        android:layout_height="55dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="monospace"
        android:text="@string/Addictions"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="317dp"
        android:layout_height="375dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="83dp"
        android:fontFamily="monospace"
        android:text="@string/Value2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

